--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -2,6 +2,7 @@
 * xref:graph-database.adoc[]
 * xref:get-started-with-neo4j.adoc[]
 * xref:graphdb-concepts.adoc[]
+* xref:graphdb-vs-rdbms.adoc[]
 * xref:cypher-intro/index.adoc[]
 ** xref:cypher-intro/patterns.adoc[]
 ** xref:cypher-intro/patterns-in-practice.adoc[]
