Move what is graph database page

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -1,4 +1,5 @@
 * xref:index.adoc[]
+* xref:graph-database.adoc[]
 * xref:get-started-with-neo4j.adoc[]
 * xref:graphdb-concepts.adoc[]
 * xref:cypher-intro/index.adoc[]
