--- a/modules/ROOT/pages/graph-database.adoc
+++ b/modules/ROOT/pages/graph-database.adoc
@@ -5,12 +5,13 @@ A graph database stores nodes and relationships instead of tables, or documents.
 Data is stored just like you might sketch ideas on a whiteboard.
 Your data is stored without restricting it to a pre-defined model, allowing a very flexible way of thinking about and using it.
 
+ifndef::backend-pdf[]
 ++++
 <div class="responsive-embed widescreen">
 <iframe width="640" height="360" src="https://www.youtube.com/embed/jFdEeJ-Ez1E" title="What is Neo4j?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 ++++
-
+endif::[]
 
 [[why-graphdb]]
 == Why graph databases?
