--- a/modules/ROOT/pages/graphdb-vs-rdbms.adoc
+++ b/modules/ROOT/pages/graphdb-vs-rdbms.adoc
@@ -1,7 +1,6 @@
 
 [[graphdb-vs-rdbms]]
 = Concepts: Relational to Graph
-
 :description: This chapter explores the concepts of graph databases from a relational developer's point of view.
 
 .Goals
@@ -50,11 +49,13 @@ Whenever you run the equivalent of a _JOIN_ operation, the graph database uses t
 
 This ability to pre-materialize relationships into the database structure allows Neo4j to provide performance of several orders of magnitude above others, especially for join-heavy queries, allowing users to leverage a _minutes to milliseconds_ advantage.
 
+ifndef::backend-pdf[]
 ++++
 <div class="responsive-embed">
 <iframe width="640" height="360" src="https://www.youtube.com/embed/NO3C-CWykkY?start=294" frameborder="0" allowfullscreen></iframe>
 </div>
 ++++
+endif::[]
 
 [#rdbms-graph-model]
 == Data Model Differences
