Create new chapter on GraphDB vs NoSQL (#84)

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -3,6 +3,7 @@
 * xref:get-started-with-neo4j.adoc[]
 * xref:graphdb-concepts.adoc[]
 * xref:graphdb-vs-rdbms.adoc[]
+* xref:graphdb-vs-nosql.adoc[]
 * xref:cypher-intro/index.adoc[]
 ** xref:cypher-intro/patterns.adoc[]
 ** xref:cypher-intro/patterns-in-practice.adoc[]
