Add new Appendix with tutorials on Cypher (#95)

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -15,4 +15,7 @@
 ** xref:cypher-intro/schema.adoc[]
 ** xref:cypher-intro/load-csv.adoc[]
 ** xref:cypher-intro/dates-datetimes-durations.adoc[]
+* xref:appendix/index.adoc[]
+** xref:guide-cypher-basics.adoc[]
+** xref:guide-build-a-recommendation-engine.adoc[]
 * xref:getting-started-resources.adoc[]
