Add new section on Data Modeling (#97)

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -17,6 +17,13 @@
 ** xref:cypher-intro/dates-datetimes-durations.adoc[]
 ** xref:cypher-intro/procedures-functions.adoc[]
 ** xref:cypher-intro/resources.adoc[]
+* xref:data-modeling/data-modeling.adoc[]
+** xref:data-modeling/guide-data-modeling.adoc[]
+** xref:data-modeling/modeling-designs.adoc[]
+** xref:data-modeling/relational-to-graph-modeling.adoc[]
+** xref:data-modeling/modeling-tips.adoc[]
+** xref:data-modeling/graph-model-refactoring.adoc[]
+** xref:data-modeling/data-modeling-tools.adoc[]
 * xref:appendix/index.adoc[]
 ** xref:guide-cypher-basics.adoc[]
 ** xref:guide-build-a-recommendation-engine.adoc[]
