--- a/modules/ROOT/pages/appendix/index.adoc
+++ b/modules/ROOT/pages/appendix/index.adoc
@@ -1,14 +1,17 @@
 [[appendix]]
 = Appendix
-:description: Cypher tutorials, example datasets, resources 
+:description: Cypher tutorials, example datasets, resources, data import tutorials 
 
-In this section you can find useful additional information. +
-The appendix contains tutorials that explain how to create and explore graphs using Cypher - Neo4j graph query language. +
-Also here you can find a list of all available example datasets used across doc sets and learning courses. +
-In the corresponding section links to the example datasets are provided, and ways of data import are explained. +
+In this section, you can find:
+
+* Tutorials on how to create and explore graphs using Cypher - Neo4j graph query language.
+* Tutorials on how to import data from a relational database into Neo4j using `LOAD CSV` Cypher command. 
+* A list of all available example datasets used across doc sets and learning courses. In the corresponding section links to the example datasets are provided, and ways of data import are explained.
+* A list of resources which may inspire you to learn more about the Neo4j environment and graph technology. 
  
 // Here we can place: 
 // the Getting Started resources, 
 // links to the GraphAcademy courses, 
 // links to the Developer blog posts, 
-// links to the Knowledge Base articles or description of them. 
+// links to the Knowledge Base articles or description of them.
+// Browser Guides list. Should be located here or not?
