--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -2,9 +2,6 @@
 * xref:graph-database.adoc[]
 * xref:get-started-with-neo4j.adoc[]
 * xref:graph-platform.adoc[]
-* xref:graphdb-concepts.adoc[]
-** xref:graphdb-concepts/graphdb-vs-rdbms.adoc[]
-** xref:graphdb-concepts/graphdb-vs-nosql.adoc[]
 * xref:cypher-intro/index.adoc[]
 ** xref:cypher-intro/patterns.adoc[]
 ** xref:cypher-intro/patterns-in-practice.adoc[]
@@ -47,6 +44,9 @@
 * xref:graph-visualization/graph-visualization.adoc[]
 ** xref:graph-visualization/graph-visualization-tools.adoc[]
 * xref:appendix/index.adoc[]
+** xref:appendix/graphdb-concepts/index.adoc[]
+*** xref:appendix/graphdb-concepts/graphdb-vs-rdbms.adoc[]
+*** xref:appendix/graphdb-concepts/graphdb-vs-nosql.adoc[]
 ** xref:appendix/guide-cypher-basics.adoc[]
 ** xref:appendix/guide-build-a-recommendation-engine.adoc[]
 ** xref:appendix/guide-import-relational-and-etl.adoc[]
