Redesign of the introductory section (#106)
* Redesign of the introductory section

* Update modules/ROOT/pages/get-started-with-neo4j/graph-platform.adoc

Co-authored-by: David Oliver <davidoliverSP2@users.noreply.github.com>

* Update graph-platform.adoc

Co-authored-by: David Oliver <davidoliverSP2@users.noreply.github.com>

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -1,7 +1,7 @@
 * xref:index.adoc[]
-* xref:graph-database.adoc[]
-* xref:get-started-with-neo4j.adoc[]
-* xref:graph-platform.adoc[]
+* xref:get-started-with-neo4j/index.adoc[]
+** xref:get-started-with-neo4j/graph-database.adoc[]
+** xref:get-started-with-neo4j/graph-platform.adoc[]
 * xref:cypher-intro/index.adoc[]
 ** xref:cypher-intro/patterns.adoc[]
 ** xref:cypher-intro/patterns-in-practice.adoc[]
@@ -14,14 +14,14 @@
 ** xref:cypher-intro/dates-datetimes-durations.adoc[]
 ** xref:cypher-intro/procedures-functions.adoc[]
 ** xref:cypher-intro/resources.adoc[]
-* xref:data-modeling/data-modeling.adoc[]
+* xref:data-modeling/index.adoc[]
 ** xref:data-modeling/guide-data-modeling.adoc[]
 ** xref:data-modeling/modeling-designs.adoc[]
 ** xref:data-modeling/relational-to-graph-modeling.adoc[]
 ** xref:data-modeling/modeling-tips.adoc[]
 ** xref:data-modeling/graph-model-refactoring.adoc[]
 ** xref:data-modeling/data-modeling-tools.adoc[]
-* xref:data-import/data-import.adoc[]
+* xref:data-import/index.adoc[]
 ** xref:data-import/csv-import.adoc[]
 ** xref:data-import/json-rest-api-import.adoc[]
 ** xref:data-import/relational-to-graph-import.adoc[]
